docs/tests/nameres/control_flow/valid/BasicIf.src
// Valid

fn int main() {
    if (true) {
        let int i = 0;  
    }

    let int i = 0;
    if (i) { }
    if (false) { }
}