docs/tests/nameres/control_flow/invalid/IfOutOfScope.src
// Invalid

fn int main() {
    if (true) {
        let int i = 0;  
    }

    if (i) { }
}